# voltamanager

./: .bandit  .gitignore  .pre-commit-config.yaml  .ruff.toml  CHANGELOG.md  CHANGELOG_v0.12.0.md  CHANGELOG_v0.13.0.md  CLAUDE.md  CODECOV_SETUP.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_v0.10.0.md  IMPLEMENTATION_SUMMARY_v0.3.0.md  IMPLEMENTATION_SUMMARY_v0.4.0.md  IMPLEMENTATION_SUMMARY_v0.5.0.md  IMPLEMENTATION_SUMMARY_v0.9.0.md  IMPROVEMENTS.md  IMPROVEMENTS_SUMMARY.md  README.md  README_TEMPLATE.md  codecov.yml  lefthook.yml  mypy.ini  pyproject.toml  requirements.txt  upgrade.py
.github/: dependabot.yml
.github/workflows/: ci.yml
.serena/: project.yml
.serena/memories/: improvements_v0.11.0.md  improvements_v0.12.0.md  improvements_v0.2.0.md  improvements_v0.3.0.md  improvements_v0.4.0.md  improvements_v0.5.0.md  improvements_v0.6.0.md  improvements_v0.7.0.md  improvements_v0.8.0.md  improvements_v0.9.0.md  project_overview.md
scripts/: test_coverage.sh
src/voltamanager/: __init__.py  __main__.py  cache.py  cli.py  config.py  constants.py  core.py  display.py  logger.py  npm.py  operations.py  security.py  utils.py  version.py
tests/: __init__.py  all_packages_test.py  bench_test.py  breaking_changes_test.py  cache_test.py  cache_ttl_test.py  cli_integration_test.py  config_test.py  core_test.py  disk_space_test.py  display_test.py  health_test.py  info_test.py  integration_test.py  logger_test.py  logs_extended_test.py  npm_test.py  operations_test.py  pin_test.py  rollback_selective_test.py  security_test.py  utils_test.py  version_test.py
