[project]
name = "voltamanager"
version = "0.13.0"
description = "Check and upgrade Volta-managed global packages"
requires-python = ">=3.13"
dependencies = [
  "packaging>=24.0",
  "rich>=14.1.0",
  "typer>=0.19.2",
]

[project.scripts]
voltamanager = "voltamanager:app"

[dependency-groups]
dev = [
  "mypy>=1.13.0",
  "pytest>=8.0.0",
  "pytest-cov>=6.0.0",
  "pytest-mock>=3.14.0",
  "ruff>=0.13.2",
  "types-setuptools>=75.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.coverage.run]
source = ["src/voltamanager"]
branch = true
omit = [
  "*/tests/*",
  "*/__pycache__/*",
  "*/.venv/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "raise AssertionError",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
  "@abstractmethod",
]

[tool.pytest.ini_options]
addopts = [
  "--verbose",
  "--cov=voltamanager",
  "--cov-report=term-missing",
  "--cov-report=html",
  "--cov-branch",
]
python_classes = ["Test*"]
python_files = ["*_test.py", "test_*.py"]
python_functions = ["test_*"]
testpaths = ["tests"]

[tool.ruff.lint]
preview = true

[tool.ruff.format]
preview = true
