[project]
name = "voltamanager"
version = "0.13.0"
description = "A package manager for a package manager of a package manager."
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.13"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Kaj Kowalski", email = "dev@kajkowalski.nl" }]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "packaging>=24.0",
  "rich>=14.1.0",
  "typer>=0.19.2",
]

[project.urls]
Changelog = "https://github.com/kjanat/voltamanager/blob/master/CHANGELOG.md"
Issues = "https://github.com/kjanat/voltamanager/issues"
Repository = "https://github.com/kjanat/voltamanager.git"

[project.scripts]
voltamanager = "voltamanager:app"

[dependency-groups]
dev = [
  "mypy>=1.13.0",
  "pytest>=8.0.0",
  "pytest-cov>=6.0.0",
  "pytest-mock>=3.14.0",
  "ruff>=0.13.2",
  "types-setuptools>=75.0.0",
]

[build-system]
requires = ["uv_build >= 0.9.5, <0.10.0"]
build-backend = "uv_build"

[tool.coverage.run]
source = ["src/voltamanager"]
branch = true

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "raise AssertionError",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
  "@abstractmethod",
]

[tool.pytest.ini_options]
addopts = [
  "--verbose",
  "--cov=voltamanager",
  "--cov-report=term-missing",
  "--cov-report=html",
  "--cov-branch",
]
python_classes = ["Test*"]
python_files = ["*_test.py", "test_*.py"]
python_functions = ["test_*"]
testpaths = ["tests"]
